# polkit-d

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: unittest.yml
src/: APILookup.txt
